<resources>
    <string name="app_name">ФК Дедиње - Live score </string>

    <string name="enter_password">Унеси лозинку</string>


    <string name="title_activity_after_login">Унос података за Live score</string>


    <string name="menuStart">Креирање утакмице</string>
    <string name="menuDogadjaj">Унос догађаја</string>
    <string name="menuSastav">Унос састава тима</string>
    <string name="menuBrisanje">Брисање догађаја</string>
    <string name="menuClientLook">Приказ утакмице</string>
    <string name="menuLogout">Одјава</string>

    <string name="creatematch">Креирај утакмицу</string>


    <string name="logout_confirm">Да ли си сигуран да желиш да се одјавиш?</string>


    <string name="startgame">Почетак утакмице</string>
    <string name="halftime">Крај I полувремена</string>
    <string name="startsecondhalf">Почетак II полувремена</string>
    <string name="finaltime">Крај утакмице</string>
    <string name="correctminute">Тачан минут игре</string>


    <string name="golgame">Гол из игре</string>
    <string name="golpenal">Гол из пенала</string>
    <string name="missedpenal">Промашен пенал</string>


    <string name="zutikarton">Жути картон</string>
    <string name="drugizutikarton">Други жути</string>
    <string name="crvenikarton">Црвени картон</string>

    <string name="txtuser">ФК Дедиње БГД</string>
    <string name="txtprotivnik">Противник</string>


    <string name="invalid_entry">Непотпуни подаци, провери унос!</string>

    <string name="playerin">Улази играч:</string>
    <string name="playerout">Излази играч:</string>

    <string name="simple_message">Податак је послат</string>
    <string name="sastav_message">Састав је унет</string>
    <string name="network_error">Не постоји интернет веза!!</string>
    <string name="wrong_password">Погрешна лозинка, покушај поново</string>


    <string name="prompt_datum">Датум утакмице:</string>
    <string name="prompt_vreme">Време почетка:</string>
    <string name="prompt_stadion">Стадион:</string>
    <string name="prompt_protivnik">Противник:</string>
    <string name="prompt_komentar">Унеси коментар:</string>

    <string name="prompt_domacin">ФК Дедиње домаћин?</string>
    <string name="prompt_lateminutes">Минути корекције:</string>


    <string name="btn_confirmsastav">Коначан састав</string>
    <string name="btn_sviigraci">Сви играчи</string>
    <string name="btn_protokol">У протоколу</string>
    <string name="btn_sendevent">Пошаљи догађај</string>



    <string name="btn_vreme">време</string>
    <string name="btn_golpenal">гол / пенал</string>
    <string name="btn_kartoni">картони</string>
    <string name="btn_izmena">измена</string>
    <string name="btn_komentar">коментар</string>

    <string name="btn_events">ток утакмице</string>
    <string name="btn_lineup">састав</string>

    <string name="title_activity_client_look">ClientLookActivity</string>


    <string name="action_settings">Settings</string>


</resources>
