<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/screen_background"
    tools:context="com.logotet.dedinjeadmin.AfterLoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMatchInfoFirstLine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:textColor="@color/screen_font"
        android:visibility="gone"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMatchInfoSecondLine"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal"
        android:layout_below="@id/tvMatchInfoFirstLine"
        android:textColor="@color/screen_font"
        android:visibility="gone"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbProgressBar"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:indeterminate="false"
        android:progress="0"
        android:max="100" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/btnStartMatch"
        android:text="@string/menuStart"
        android:background="@drawable/actionbutton"
        android:textColor="@color/btn1_font"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/pbProgressBar"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnMakeSastav"
        android:text="@string/menuSastav"
        android:background="@drawable/actionbutton"
        android:textColor="@color/btn1_font"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnStartMatch"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnEnterEvent"
        android:text="@string/menuDogadjaj"
        android:background="@drawable/actionbutton"
        android:textColor="@color/btn1_font"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnMakeSastav"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnDeleteEvent"
        android:text="@string/menuBrisanje"
        android:background="@drawable/actionbutton"
        android:textColor="@color/btn1_font"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnEnterEvent"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnClientLook"
        android:text="@string/menuClientLook"
        android:background="@drawable/actionbutton"
        android:textColor="@color/btn1_font"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnDeleteEvent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/btnLogout"
        android:text="@string/menuLogout"
        android:background="@drawable/actionbutton"
        android:textColor="@color/btn1_font"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnClientLook"/>

</RelativeLayout>

