<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/screen_background"
    tools:context="com.logotet.dedinjeadmin.StartMatchActivity">

    <EditText
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/etDatumUtakmice"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentTop="true"
        android:inputType="date"
        android:background="@drawable/edittext"
        android:textColor="@color/baselight"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvDatum"
        android:gravity="right"
        android:text="@string/prompt_datum"
        android:textColor="@color/screen_font"
        android:layout_toLeftOf="@+id/etDatumUtakmice"
        android:layout_alignBaseline="@+id/etDatumUtakmice"/>



    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/etVremePocetka"
        android:layout_alignParentRight="true"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/edittext"
        android:layout_below="@+id/etDatumUtakmice"
        android:textColor="@color/baselight"
        android:inputType="time"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPropmptVreme"
        android:gravity="right"
        android:layout_below="@+id/tvDatum"
        android:layout_toLeftOf="@+id/etVremePocetka"
        android:layout_alignBaseline="@+id/etVremePocetka"
        android:textColor="@color/screen_font"
        android:text="@string/prompt_vreme"/>



    <Spinner
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/spProtivnik"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etVremePocetka"
        ></Spinner>

    <Spinner
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/spStadion"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/spProtivnik"
        ></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPromptProtivnik"
        android:layout_below="@+id/tvPropmptVreme"
        android:layout_toLeftOf="@id/spProtivnik"
        android:layout_alignBaseline="@id/spProtivnik"
        android:textColor="@color/screen_font"
        android:text="@string/prompt_protivnik"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPromptStadion"
        android:layout_below="@+id/tvPromptProtivnik"
        android:layout_toLeftOf="@id/spStadion"
        android:layout_alignBaseline="@+id/spStadion"
        android:textColor="@color/screen_font"
        android:text="@string/prompt_stadion"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvWarningStart"
        android:textColor="@color/screen_font"
        android:layout_below="@+id/spStadion" />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_domacin"
        android:id="@+id/cbDomacin"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvWarningStart"
        android:textColor="@color/screen_font"
        android:buttonTint="@color/baselight"
        android:checked="false"/>

    <Button
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:id="@+id/btnCreateMatch"
        android:layout_centerHorizontal="true"
        android:background="@drawable/actionbutton"
        android:textColor="@color/btn1_font"
        android:layout_below="@id/cbDomacin"
        android:text="@string/creatematch"/>
</RelativeLayout>
