<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context="com.logotet.dedinjeadmin.EventsActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnExpandTime"
        android:textAllCaps="false"
        android:text="vreme"
        android:gravity="right" />
    <!--  ============pocetak opisa delova prikaza=====================   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llExpandTime"
        android:visibility="visible"  >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlTimeEvents"    >

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/rgTimeEvents"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true" >
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbStartGame"
                    android:text="@string/startgame"   />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbHalfTime"
                    android:text="@string/halftime" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbStartSecondHalf"
                    android:text="@string/startsecondhalf"  />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rbFinalTime"
                    android:text="@string/finaltime" />

            </RadioGroup>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="12dp"
                android:layout_toRightOf="@id/rgTimeEvents" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="minuti korekcije"    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/llLateMinutes"
                    android:layout_gravity="center_horizontal"
                    android:inputType="numberDecimal" />

            </LinearLayout>
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnTimeEvents"
                android:layout_below="@+id/rgTimeEvents"
                android:layout_centerHorizontal="true"
                android:text="Posalji" />

        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnExpandGoal"
        android:textAllCaps="false"
        android:text="gol"
        android:paddingRight="30dp"
        android:gravity="right"  />
    <!--  =================================================================   -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llExpandGoal"
        android:visibility="gone" >
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgGol"     >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goluser"         />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_gravity="right"
                android:text="@string/golprotivnik"
/>
        </RadioGroup>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinStrelac"
></Spinner>
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnGoal"
            android:layout_gravity="center_horizontal"
            android:text="GOOOOOL"
 />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnExpandKarton"
        android:textAllCaps="false"
        android:text="kartoni"
        android:gravity="right" />
    <!--  =================================================================   -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llExpandKarton"
        android:visibility="gone">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rlKartoni" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rgKartoni"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbZutiKarton"
                android:text="@string/zutikarton"  />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbDrugiZutiKarton"
                android:text="@string/drugizutikarton"  />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbCrveniKarton"
                android:text="@string/crvenikarton"  />

        </RadioGroup>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/rgKartoni"
            android:layout_alignParentRight="true"
            android:id="@+id/rgWhatTeam" >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtuser"
                android:id="@+id/rbKartonDedinje"  />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbKartonProtivnik"
                android:text="@string/txtprotivnik"  />

        </RadioGroup>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinKarton"
            android:layout_below="@+id/rgKartoni"></Spinner>


    </RelativeLayout>

        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnKarton"
            android:layout_gravity="center_horizontal"
            android:text="Karton"  />
</LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnExpandIzmena"
        android:textAllCaps="false"
        android:text="izmene"
        android:gravity="right"  />

    <!--  =================================================================   -->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llExpandIzmena"
        android:visibility="gone" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerout"  />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinPlayerOut" > </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/playerin"  />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinPlayerIn" >    </Spinner>
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnIzmena"
            android:layout_gravity="center_horizontal"
            android:text="Izmena"  />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnExpandKomentar"
        android:textAllCaps="false"
        android:text="komentar"
        android:gravity="right"  />
    <!--  =================================================================   -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/llExpandKomentar"
        android:visibility="gone" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Unesi komentar"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etKomentar"  />
        <Button
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnKomentar"
            android:layout_gravity="center_horizontal"
            android:text="Komentar"  />
    </LinearLayout>








</LinearLayout>
