<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.logotet.dedinjeadmin.SastavActivity">


    <LinearLayout
        android:layout_width="fill_parent"
       android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/llTopButtons" android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_margin="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_sviigraci"
            android:id="@+id/btnVanProtokola"
/>
        <Button
            android:layout_width="0dp"
            android:layout_margin="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/btn_protokol"
            android:id="@+id/btnUProtokolu" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/llSviIgraci"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/llTopButtons"
        android:layout_alignParentLeft="true">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvIgraci"></ListView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:id="@+id/llProtokol"
        android:layout_marginTop="2dp"
        android:layout_below="@+id/llTopButtons"
        android:layout_alignParentLeft="true">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvUProtokolu"></ListView>
    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnConfirmSastav"
        android:text="@string/btn_confirmsastav"/>
</RelativeLayout>
